--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tourney:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
-
+<!--This is a comment testing changes made to the repository-->
 <body>
     <div class="container">
         <form class="form" id="login">
