Organized files into folders

--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login / Sign Up Form</title>
-    <link rel="stylesheet" href = "./src/main.css">
+    <link rel="stylesheet" href = "./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tourney:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
-<!--This is a comment testing changes made to the repository-->
+
 <body>
     <div class="container">
         <form class="form" id="login">
@@ -66,6 +66,6 @@
         </form>
     </div>
     
-    <script src = "./src/main.js"></script>
+    <script src = "./js/main.js"></script>
 </body>
 </html>
