--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -16,12 +16,12 @@
             <h1 class="form__title">Login</h1>
             <div class="form__message form__message--error"></div>
             <div class="form__input-group">
-                <input type="text" class="form__input" autofocus placeholder="Username or email">
+                <input type="text" id="loginUsername" class="form__input" autofocus placeholder="Username or email">
                 <div class="form__input-error-message"></div>
             </div>
 
             <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Password">
+                <input type="password" id="loginPassword" class="form__input" autofocus placeholder="Password">
             </div>
             
             <button class="form__button" type="submit">Continue</button>
@@ -45,19 +45,24 @@
             </div>
 
             <div class="form__input-group">
-                <input type="text" class="form__input" autofocus placeholder="Email Address">
+                <input type="text" id="signupFirstName" class="form__input" autofocus placeholder="First Name">
                 <div class="form__input-error-message"></div>
             </div>
 
             <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Password">
+                <input type="text" id="signupLastName" class="form__input" autofocus placeholder="Last Name">
+                <div class="form__input-error-message"></div>
             </div>
 
             <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Confirm Password">
+                <input type="password" id="signupPassword" class="form__input" autofocus placeholder="Password">
+            </div>
+
+            <div class="form__input-group">
+                <input type="password" id="confirmPassword" class="form__input" autofocus placeholder="Confirm Password">
             </div>
             
-            <button class="form__button" type="submit">Continue</button>
+            <button class="form__button" type="submit">Register</button>
 
             <p class="form__text">
                 Already have an account?
