--- a/Group8ContactProject/contactPage.html
+++ b/Group8ContactProject/contactPage.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact Page</title>
-        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/contact.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Tourney:wght@400;500;600&display=swap" rel="stylesheet">
@@ -12,8 +12,9 @@
 
     <body>
         <div class="container">
-            <h1 class="form__title">Contact Page</h1>
-
+            <h1 class="form__title" id="page_title">Contact Page</h1>
+        </div>
+        <div>
             <button class="form__button form__button--logout" id="logoutButton">Logout</button>
         </div>
 
