--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -13,10 +13,10 @@
 <body>
     <div class="container">
         <form class="form" id="login">
-            <h1 class="form__title">Login</h1>
+            <h1 class="form__title">WeConnect</h1>
             <div class="form__message form__message--error"></div>
             <div class="form__input-group">
-                <input type="text" id="loginUsername" class="form__input" autofocus placeholder="Username or email">
+                <input type="text" id="loginUsername" class="form__input" autofocus placeholder="Username">
                 <div class="form__input-error-message"></div>
             </div>
 
@@ -24,7 +24,7 @@
                 <input type="password" id="loginPassword" class="form__input" autofocus placeholder="Password">
             </div>
             
-            <button class="form__button" type="submit">Continue</button>
+            <button class="form__button" type="submit">Login</button>
             
             <p class="form__text">
                 <a href="#" class="form__link">Forgot your password?</a>
