--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login / Sign Up Form</title>
+    <title>New Login/ Sign Up</title>
     <link rel="stylesheet" href = "./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
