Test Submit Box for "Add Contact"

--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -25,7 +25,6 @@
 
 <body>
     <!--  ---------------------  Above: Navbar Container --------------------- -->
-
     <header class="header">
         <a href="#" class="logo">WeConnect</a>
 
@@ -191,7 +190,24 @@
         <div class="popup" id="popup">
             <img src="./images/add.jpg">
             <h2>Add New Contact</h2>
-            <p>Your details have been successfully submitted. Thanks!</p>
+            <p>
+                First Name:
+                <input id="first__name__input" type="text" placeholder="Rick">
+            </p>
+            <p>
+                Last Name:
+                <input id="last__name__input" type="text" placeholder="Leinecker">
+            </p>
+            <p>
+                Email:
+                <input id="email__input" type="text" placeholder="example@example.com">
+            </p>
+            <p>
+                Phone Number:
+                <input id="phone__number__input" type="text" placeholder="(123) 456 789">
+            </p>
+                
+            <!-- <p>Your details have been successfully submitted. Thanks!</p> -->
             <button type="button" onclick="closePopup()">OK</button>
         </div>
     </div>
