--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -16,11 +16,13 @@
             <h1 class="form__title">WeConnect</h1>
             <div class="form__message form__message--error"></div>
             <div class="form__input-group">
+                Username
                 <input type="text" id="loginUsername" class="form__input" autofocus placeholder="Username">
                 <div class="form__input-error-message"></div>
             </div>
 
             <div class="form__input-group">
+                Password
                 <input type="password" id="loginPassword" class="form__input" autofocus placeholder="Password">
             </div>
             
