--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -38,25 +38,30 @@
             <h1 class="form__title">Create Account</h1>
             <div class="form__message form__message--error"></div>
             <div class="form__input-group">
+                Username
                 <input type="text" id="signupUsername" class="form__input" autofocus placeholder="Username">
                 <div class="form__input-error-message"></div>
             </div>
 
             <div class="form__input-group">
+                First Name
                 <input type="text" id="signupFirstName" class="form__input" autofocus placeholder="First Name">
                 <div class="form__input-error-message"></div>
             </div>
 
             <div class="form__input-group">
+                Last Name
                 <input type="text" id="signupLastName" class="form__input" autofocus placeholder="Last Name">
                 <div class="form__input-error-message"></div>
             </div>
 
             <div class="form__input-group">
+                Password
                 <input type="password" id="signupPassword" class="form__input" autofocus placeholder="Password">
             </div>
 
             <div class="form__input-group">
+                Confirm Password
                 <input type="password" id="confirmPassword" class="form__input" autofocus placeholder="Confirm Password">
             </div>
             
