Database changes, styling changes, bugfixing

--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -44,6 +44,12 @@
             </div>
 
             <div class="form__input-group">
+                Email
+                <input type="text" id="signupEmail" class="form__input" autofocus placeholder="Email">
+                <div class="form__input-error-message"></div>
+            </div>
+
+            <div class="form__input-group">
                 First Name
                 <input type="text" id="signupFirstName" class="form__input" autofocus placeholder="First Name">
                 <div class="form__input-error-message"></div>
