--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -78,7 +78,7 @@
                                 </th>
                             </tr>
                         </thead>
-                        <tbody id="contactsTable"></tbody>
+                        <tbody class="contacts__table" id="contactsTable"></tbody>
                     </table>
                 </div>
             </div>
