--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
+    <div class="overlay">
+        <img src="./images/logo.png" loading="lazy">
+    </div>
+    
     <div class="container">
+        
         <form class="form" id="login">
             <h1 class="form__title">WeConnect</h1>
             <div class="form__message form__message--error"></div>
