Added lazy loading and phone number formatting

--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -192,19 +192,19 @@
             <h2>Add New Contact</h2>
             <div class="add__first__name">
                 <p>First Name:</p>
-                <input id="first__name__input" type="text" placeholder="Rick">
+                <input id="first__name__input" class="contact__input" type="text" placeholder="Rick">
             </div>
             <div class="add__last__name">
                 <p>Last Name:</p>
-                <input id="last__name__input" type="text" placeholder="Leinecker">
+                <input id="last__name__input" type="text" class="contact__input" placeholder="Leinecker">
             </div>
             <div class="add__email">
                 <p>Email:</p>
-                <input id="email__input" type="text" placeholder="example@example.com">
+                <input id="email__input" type="text" class="contact__input" placeholder="example@example.com">
             </div>
             <div class="add__phone__number">
                 <p>Phone Number:</p>
-                <input id="phone__number__input" type="text" placeholder="(123) 456 789">
+                <input id="phone__number__input" type="text" class="contact__input" placeholder="(123) 456-789">
             </div>
                 
             <!-- <p>Your details have been successfully submitted. Thanks!</p> -->
