Signup and add/edit contact validation

--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -272,20 +272,40 @@
             <img src="./images/add.png">
             <h2>Add New Contact</h2>
             <div class="add__first__name">
-                <p>First Name:</p>
-                <input id="first__name__input" class="contact__input" type="text" placeholder="Rick">
+                <div class="input__container">
+                    <p>First Name:</p>
+                    <div class="input__error">
+                        <input id="first__name__input" class="contact__input" type="text" placeholder="Rick">
+                        <div class="form__input-error-message"></div>
+                    </div>
+                </div>
             </div>
             <div class="add__last__name">
-                <p>Last Name:</p>
-                <input id="last__name__input" type="text" class="contact__input" placeholder="Leinecker">
+                <div class="input__container">
+                    <p>Last Name:</p>
+                    <div class="input__error">
+                        <input id="last__name__input" type="text" class="contact__input" placeholder="Leinecker">
+                        <div class="form__input-error-message"></div>
+                    </div>
+                </div>
             </div>
             <div class="add__email">
-                <p>Email:</p>
-                <input id="email__input" type="text" class="contact__input" placeholder="example@example.com">
+                <div class="input__container">
+                    <p>Email:</p>
+                    <div class="input__error">
+                        <input id="email__input" type="text" class="contact__input" placeholder="example@example.com">
+                        <div class="form__input-error-message"></div>
+                    </div>
+                </div>
             </div>
             <div class="add__phone__number">
-                <p>Phone Number:</p>
-                <input id="phone__number__input" type="text" class="contact__input" placeholder="(123) 456-789">
+                <div class="input__container">
+                    <p>Phone Number:</p>
+                    <div class="input__error">
+                        <input id="phone__number__input" type="text" class="contact__input" placeholder="(123) 456-789">
+                        <div class="form__input-error-message"></div>
+                    </div>
+                </div>
             </div>
 
             <!-- <p>Your details have been successfully submitted. Thanks!</p> -->
@@ -299,20 +319,40 @@
             <img src="./images/edit.png">
             <h2>Edit Contact</h2>
             <div class="edit__first__name">
-                <p>First Name:</p>
-                <input id="edit__first__name__input" type="text" placeholder="Loading...">
+                <div class="input__container">
+                    <p>First Name:</p>
+                    <div class="input__error">
+                        <input id="edit__first__name__input" type="text" class="contact__edit">
+                        <div class="form__input-error-message"></div>
+                    </div>
+                </div>
             </div>
             <div class="edit__last__name">
-                <p>Last Name:</p>
-                <input id="edit__last__name__input" type="text" placeholder="Loading...">
+                <div class="input__container">
+                    <p>Last Name:</p>
+                    <div class="input__error">
+                        <input id="edit__last__name__input" type="text" class="contact__edit">
+                        <div class="form__input-error-message"></div>
+                    </div>
+                </div>
             </div>
             <div class="edit__email">
-                <p>Email:</p>
-                <input id="edit__email__input" type="text" placeholder="Loading...">
+                <div class="input__container">
+                    <p>Email:</p>
+                    <div class="input__error">
+                        <input id="edit__email__input" type="text" class="contact__edit">
+                        <div class="form__input-error-message"></div>
+                    </div>
+                </div>
             </div>
             <div class="edit__phone__number">
-                <p>Phone Number:</p>
-                <input id="edit__phone__number__input" type="text" placeholder="Loading...">
+                <div class="input__container">
+                    <p>Phone Number:</p>
+                    <div class="input__error">
+                        <input id="edit__phone__number__input" type="text" class="contact__edit">
+                        <div class="form__input-error-message"></div>
+                    </div>
+                </div>
             </div>
 
             <!-- <p>Your details have been successfully submitted. Thanks!</p> -->
