--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -38,7 +38,7 @@
 
             <p class="form__text">
                 Don't have an account?
-                <a class="form__link" href="./" id="linkCreateAccount">Create Account</a>
+                <a class="form__link" href="#" id="linkCreateAccount" style="color: rgb(46, 133, 255);">Create Account</a>
             </p>
         </form>
 
@@ -85,7 +85,7 @@
 
             <p class="form__text">
                 Already have an account?
-                <a class="form__link" href="./" id="linkLogin">Sign In</a>
+                <a class="form__link" href="./" id="linkLogin" style="color: rgb(46, 133, 255);">Sign In</a>
             </p>
         </form>
     </div>
