--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -132,16 +132,16 @@
     <div class="contact__page" id="section__contact">
         <div class="card-group">
             <div class="card" id="contact__card">
-                <img class="card-img-top" src="./images/img-1.jpg" alt="Card image cap" style="border-radius: 25px;">
+                <img class="card__img__top" src="./images/img-1.jpg">
                 <div class="card-body">
-                    <h4 class="card-title" style="color: white;">Tanner Assenmacher</h4>
+                    <h3 class="card-title" style="color: rgb(255, 255, 255);">Tanner Assenmacher</h3>
                     <div class="card__text">
                         <i class="fa fa-linkedin"
                             style="color: white; font-size: 1.25rem; background-color: rgb(0, 119, 181); padding: .2rem; border-radius: 5px;"></i>
                         <a href="https://www.linkedin.com/in/tanner-assenmacher-45364a246/" style="margin-left: 1.4rem;">LinkedIn</a>
                     </div>
                     <div class="card__text">
-                        <i class="fa fa-github" style="color: black; font-size: 2rem; border-radius: 50%;"></i>
+                        <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
                         <a href="#">GitHub</a>
                     </div>
                     <div class="card__text">
@@ -150,24 +150,24 @@
                         <a href="#">Instagram</a>
                     </div>
                     <div class="card__text">
-                        <i class="fa fa-envelope" style="color: white; font-size: 1.5rem;"></i>
-                        <p>placeholder@none.com</p>
+                        <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
+                        <p style="color: rgb(255, 255, 255);">placeholder@none.com</p>
                     </div>
-                    <h5 class="card-text"><small class="text-muted" style="color: rgb(0, 183, 186) !important">Computer
-                            Science Undergraduate</small></h5>
+                    <h4 class="card-text"><small class="text-muted" style="color: rgb(255, 255, 255) !important">Computer
+                            Science Undergraduate</small></h4>
                 </div>
             </div>
             <div class="card" id="contact__card">
-                <img class="card-img-top" src="./images/kimsrun.jpg" alt="Card image cap" style="border-radius: 25px;">
+                <img class="card__img__top" src="./images/kimsrun.jpg">
                 <div class="card-body">
-                    <h4 class="card-title" style="color: white;">Kimsrun Lim</h4>
+                    <h3 class="card-title" style="color: rgb(255, 255, 255);">Kimsrun Lim</h3>
                     <div class="card__text">
                         <i class="fa fa-linkedin"
                             style="color: white; font-size: 1.25rem; background-color: rgb(0, 119, 181); padding: .2rem; border-radius: 5px;"></i>
                         <a href="https://www.linkedin.com/in/kimsrun-lim/" style="margin-left: 1.4rem;">LinkedIn</a>
                     </div>
                     <div class="card__text">
-                        <i class="fa fa-github" style="color: black; font-size: 2rem; border-radius: 50%;"></i>
+                        <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
                         <a href="https://github.com/KimsrunLim">GitHub</a>
                     </div>
                     <div class="card__text">
@@ -176,24 +176,24 @@
                         <a href="https://www.instagram.com/kimsrun.lim/">Instagram</a>
                     </div>
                     <div class="card__text">
-                        <i class="fa fa-envelope" style="color: white; font-size: 1.5rem;"></i>
-                        <p>ksrunlim@gmail.com</p>
+                        <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
+                        <p style="color: rgb(255, 255, 255);">ksrunlim@gmail.com</p>
                     </div>
-                    <h5 class="card-text"><small class="text-muted" style="color: rgb(0, 183, 186) !important">Computer
-                            Science Undergraduate</small></h5>
+                    <h4 class="card-text"><small class="text-muted" style="color: rgb(255, 255, 255) !important">Computer
+                            Science Undergraduate</small></h4>
                 </div>
             </div>
             <div class="card" id="contact__card">
-                <img class="card-img-top" src="./images/img-1.jpg" alt="Card image cap" style="border-radius: 25px;">
+                <img class="card__img__top" src="./images/evan.jpeg">
                 <div class="card-body">
-                    <h4 class="card-title" style="color: white;">Evan Pilling</h4>
+                    <h3 class="card-title" style="color: rgb(255, 255, 255);">Evan Pilling</h3>
                     <div class="card__text">
                         <i class="fa fa-linkedin"
                             style="color: white; font-size: 1.25rem; background-color: rgb(0, 119, 181); padding: .2rem; border-radius: 5px;"></i>
-                        <a href="www.linkedin.com/in/evan-pilling-a39765250" style="margin-left: 1.4rem;">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/evan-pilling-a39765250" style="margin-left: 1.4rem;">LinkedIn</a>
                     </div>
                     <div class="card__text">
-                        <i class="fa fa-github" style="color: black; font-size: 2rem; border-radius: 50%;"></i>
+                        <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
                         <a href="#">GitHub</a>
                     </div>
                     <div class="card__text">
@@ -202,24 +202,24 @@
                         <a href="#">Instagram</a>
                     </div>
                     <div class="card__text">
-                        <i class="fa fa-envelope" style="color: white; font-size: 1.5rem;"></i>
-                        <p>placeholder@none.com</p>
+                        <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
+                        <p style="color: rgb(255, 255, 255);">placeholder@none.com</p>
                     </div>
-                    <h5 class="card-text"><small class="text-muted" style="color: rgb(0, 183, 186) !important">Computer
-                            Science Undergraduate</small></h5>
+                    <h4 class="card-text"><small class="text-muted" style="color: rgb(255, 255, 255) !important">Computer
+                            Science Undergraduate</small></h4>
                 </div>
             </div>
             <div class="card" id="contact__card">
-                <img class="card-img-top" src="./images/img-1.jpg" alt="Card image cap" style="border-radius: 25px;">
+                <img class="card__img__top" src="./images/img-1.jpg">
                 <div class="card-body">
-                    <h4 class="card-title" style="color: white;">Luka Telebak</h4>
+                    <h3 class="card-title" style="color: rgb(255, 255, 255);">Luka Telebak</h3>
                     <div class="card__text">
                         <i class="fa fa-linkedin"
                             style="color: white; font-size: 1.25rem; background-color: rgb(0, 119, 181); padding: .2rem; border-radius: 5px;"></i>
                         <a href="#" style="margin-left: 1.4rem;">LinkedIn</a>
                     </div>
                     <div class="card__text">
-                        <i class="fa fa-github" style="color: black; font-size: 2rem; border-radius: 50%;"></i>
+                        <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
                         <a href="https://github.com/idyllicdawn">GitHub</a>
                     </div>
                     <div class="card__text">
@@ -228,24 +228,24 @@
                         <a href="#">Instagram</a>
                     </div>
                     <div class="card__text">
-                        <i class="fa fa-envelope" style="color: white; font-size: 1.5rem;"></i>
-                        <p>placeholder@none.com</p>
+                        <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
+                        <p style="color: rgb(255, 255, 255);">placeholder@none.com</p>
                     </div>
-                    <h5 class="card-text"><small class="text-muted" style="color: rgb(0, 183, 186) !important">Computer
-                            Science Undergraduate</small></h5>
+                    <h4 class="card-text"><small class="text-muted" style="color: rgb(255, 255, 255) !important">Computer
+                            Science Undergraduate</small></h4>
                 </div>
             </div>
             <div class="card" id="contact__card">
-                <img class="card-img-top" src="./images/img-1.jpg" alt="Card image cap" style="border-radius: 25px;">
+                <img class="card__img__top" src="./images/img-1.jpg">
                 <div class="card-body">
-                    <h4 class="card-title" style="color: white;">Austin Frost</h4>
+                    <h3 class="card-title" style="color: rgb(255, 255, 255);">Austin Frost</h3>
                     <div class="card__text">
                         <i class="fa fa-linkedin"
                             style="color: white; font-size: 1.25rem; background-color: rgb(0, 119, 181); padding: .2rem; border-radius: 5px;"></i>
                         <a href="#" style="margin-left: 1.4rem;">LinkedIn</a>
                     </div>
                     <div class="card__text">
-                        <i class="fa fa-github" style="color: black; font-size: 2rem; border-radius: 50%;"></i>
+                        <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
                         <a href="#">GitHub</a>
                     </div>
                     <div class="card__text">
@@ -254,11 +254,11 @@
                         <a href="#">Instagram</a>
                     </div>
                     <div class="card__text">
-                        <i class="fa fa-envelope" style="color: white; font-size: 1.5rem;"></i>
-                        <p>austinfrost04@gmail.com</p>
+                        <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
+                        <p style="color: rgb(255, 255, 255);">austinfrost04@gmail.com</p>
                     </div>
-                    <h5 class="card-text"><small class="text-muted" style="color: rgb(0, 183, 186) !important">Computer
-                            Engineering Undergraduate</small></h5>
+                    <h4 class="card-text"><small class="text-muted" style="color: rgb(255, 255, 255) !important">Computer
+                            Engineering Undergraduate</small></h4>
                 </div>
             </div>
         </div>
