Contact Cards Updated

--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -142,12 +142,12 @@
                     </div>
                     <div class="card__text">
                         <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
-                        <a href="#">GitHub</a>
+                        <a href="#section__contact">GitHub</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-instagram"
                             style="color: white; font-size: 1.5rem; background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%); padding: 0.15rem; border-radius: 5px;"></i>
-                        <a href="#">Instagram</a>
+                        <a href="#section__contact">Instagram</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
@@ -194,12 +194,12 @@
                     </div>
                     <div class="card__text">
                         <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
-                        <a href="#">GitHub</a>
+                        <a href="#section__contact">GitHub</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-instagram"
                             style="color: white; font-size: 1.5rem; background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%); padding: 0.15rem; border-radius: 5px;"></i>
-                        <a href="#">Instagram</a>
+                        <a href="#section__contact">Instagram</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
@@ -210,13 +210,13 @@
                 </div>
             </div>
             <div class="card" id="contact__card">
-                <img class="card__img__top" src="./images/img-1.jpg">
+                <img class="card__img__top" src="./images/luka.jpg">
                 <div class="card-body">
                     <h3 class="card-title" style="color: rgb(255, 255, 255);">Luka Telebak</h3>
                     <div class="card__text">
                         <i class="fa fa-linkedin"
                             style="color: white; font-size: 1.25rem; background-color: rgb(0, 119, 181); padding: .2rem; border-radius: 5px;"></i>
-                        <a href="#" style="margin-left: 1.4rem;">LinkedIn</a>
+                        <a href="#section__contact" style="margin-left: 1.4rem;">LinkedIn</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
@@ -225,7 +225,7 @@
                     <div class="card__text">
                         <i class="fa fa-instagram"
                             style="color: white; font-size: 1.5rem; background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%); padding: 0.15rem; border-radius: 5px;"></i>
-                        <a href="#">Instagram</a>
+                        <a href="#section__contact">Instagram</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
@@ -242,16 +242,16 @@
                     <div class="card__text">
                         <i class="fa fa-linkedin"
                             style="color: white; font-size: 1.25rem; background-color: rgb(0, 119, 181); padding: .2rem; border-radius: 5px;"></i>
-                        <a href="#" style="margin-left: 1.4rem;">LinkedIn</a>
+                        <a href="#section__contact" style="margin-left: 1.4rem;">LinkedIn</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
-                        <a href="#">GitHub</a>
+                        <a href="#section__contact">GitHub</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-instagram"
                             style="color: white; font-size: 1.5rem; background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%); padding: 0.15rem; border-radius: 5px;"></i>
-                        <a href="#">Instagram</a>
+                        <a href="#section__contact">Instagram</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
