Removed Temp Backgrounds and recolored Submit and Register buttons

--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -203,7 +203,7 @@
                     </div>
                     <div class="card__text">
                         <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
-                        <p style="color: rgb(255, 255, 255);">placeholder@none.com</p>
+                        <p style="color: rgb(255, 255, 255);">ev772543@ucf.edu</p>
                     </div>
                     <h4 class="card-text"><small class="text-muted" style="color: rgb(255, 255, 255) !important">Computer
                             Science Undergraduate</small></h4>
@@ -229,7 +229,7 @@
                     </div>
                     <div class="card__text">
                         <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
-                        <p style="color: rgb(255, 255, 255);">placeholder@none.com</p>
+                        <p style="color: rgb(255, 255, 255);">lu143334@ucf.edu</p>
                     </div>
                     <h4 class="card-text"><small class="text-muted" style="color: rgb(255, 255, 255) !important">Computer
                             Science Undergraduate</small></h4>
