Evan's GitHub Placed in

--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -194,7 +194,7 @@
                     </div>
                     <div class="card__text">
                         <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
-                        <a href="#section__contact">GitHub</a>
+                        <a href="https://github.com/evanpilling">GitHub</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-instagram"
