Contact Card Updates

--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -132,7 +132,7 @@
     <div class="contact__page" id="section__contact">
         <div class="card-group">
             <div class="card" id="contact__card">
-                <img class="card__img__top" src="./images/img-1.jpg">
+                <img class="card__img__top" src="./images/tanner.jpg">
                 <div class="card-body">
                     <h3 class="card-title" style="color: rgb(255, 255, 255);">Tanner Assenmacher</h3>
                     <div class="card__text">
@@ -142,11 +142,11 @@
                     </div>
                     <div class="card__text">
                         <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
-                        <a href="#section__contact">GitHub</a>
+                        <a href="https://github.com/Frosty204">GitHub</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
-                        <p style="color: rgb(255, 255, 255);">placeholder@none.com</p>
+                        <p style="color: rgb(255, 255, 255);">tannerassenmacher@ucf.edu</p>
                     </div>
                     <h4 class="card-text"><small class="text-muted" style="color: rgb(255, 255, 255) !important">Computer
                             Science Undergraduate</small></h4>
@@ -198,11 +198,11 @@
                 <img class="card__img__top" src="./images/luka.jpg">
                 <div class="card-body">
                     <h3 class="card-title" style="color: rgb(255, 255, 255);">Luka Telebak</h3>
-                    <div class="card__text">
+                    <!-- <div class="card__text">
                         <i class="fa fa-linkedin"
                             style="color: white; font-size: 1.25rem; background-color: rgb(0, 119, 181); padding: .2rem; border-radius: 5px;"></i>
                         <a href="#section__contact" style="margin-left: 1.4rem;">LinkedIn</a>
-                    </div>
+                    </div> -->
                     <div class="card__text">
                         <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
                         <a href="https://github.com/idyllicdawn">GitHub</a>
@@ -219,11 +219,11 @@
                 <img class="card__img__top" src="./images/img-1.jpg">
                 <div class="card-body">
                     <h3 class="card-title" style="color: rgb(255, 255, 255);">Austin Frost</h3>
-                    <div class="card__text">
+                    <!-- <div class="card__text">
                         <i class="fa fa-linkedin"
                             style="color: white; font-size: 1.25rem; background-color: rgb(0, 119, 181); padding: .2rem; border-radius: 5px;"></i>
                         <a href="#section__contact" style="margin-left: 1.4rem;">LinkedIn</a>
-                    </div>
+                    </div> -->
                     <div class="card__text">
                         <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
                         <a href="#section__contact">GitHub</a>
